welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:16: error: not found: value trie2
      trie2(tab(i),tab(i+1))
      ^noTriples:18: error: missing arguments for method verifTrie in class noTriples;
follow this method with `_' if you want to treat it as a partially applied function
    estTrie=verifTrie
            ^noTriples:28: error: reassignment to val
    a=b-a
     ^noTriples:29: error: reassignment to val
    b=b-a
     ^noTriples:30: error: reassignment to val
    a=b+a
     ^